# mobile_test_recorder

./: .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE_IMPROVEMENTS.md  BUSINESS_LOGIC_ANALYZER.md  CHANGELOG.md  CHANGELOG_BUSINESS_LOGIC_V2.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  COMPLETE_REPORT.md  CONTRIBUTING.md  CURSOR_SETUP.md  DEVELOPMENT.md  DOCUMENTATION_UPDATE.md  FIXES_SUMMARY.md  FLUTTER_RN_SUPPORT.md  FULL_CODE_REVIEW_FINAL.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY_V2.md  IMPROVEMENTS_REPORT.md  INTEGRATION_MODULE.md  JETBRAINS_PLUGIN_ROADMAP.md  LICENSE  ML_TRAINING_GUIDE.md  ML_TRAINING_REPORT.md  PHASE_3_SUMMARY.md  PHASE_5_COMPLETE.md  PHASE_5_PLAN.md  PHASE_5_PROGRESS.md  PHASE_5_SESSION_2.md  PHASE_5_SESSION_3.md  PHASE_6_COMPLETE.md  PHASE_6_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_ML.md  (+23 more)
.github/: SETUP_INSTRUCTIONS.md  TOPICS.md  add_github_topics.py  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo-app/: README.md  XPATH_TEST_ELEMENTS.md
demo-app/android/: KYC_INTEGRATION.md  build.gradle.kts  settings.gradle.kts
demo-app/ios/: README.md
demo-app/mock-backend/: README.md  main.py
docs/: ADVANCED_SELECTORS.md  API_MOCKING.md  ARCHITECTURE.md  CLI_API.md  ELEMENT_SELECTORS_COMPREHENSIVE.md  ENHANCED_SELECTORS.md  LOAD_TESTING.md  MULTI_LANGUAGE_ARCHITECTURE.md  PARALLEL_EXECUTION.md  PHASE3_ROADMAP.md  PHASE5_RUST_CORE.md  PROTOCOL.md  RUST_CORE.md  SELF_LEARNING_ML.md  TECHNICAL_DESIGN.md  UNIVERSAL_ML_MODEL.md
framework/: __init__.py
framework/analysis/: __init__.py  accessibility_analyzer.py  performance_analyzer.py  security_analyzer.py  visual_analyzer.py
framework/analyzers/: __init__.py  analysis_result.py  android_analyzer.py  android_business_analyzer.py  ast_analyzer.py  base_analyzer.py  business_logic_analyzer.py  edge_case_detector.py  ios_analyzer.py  ios_business_analyzer.py
framework/api_analyzer/: __init__.py  api_log_analyzer.py
framework/backends/: __init__.py  appium_backend.py  espresso_backend.py  xctest_backend.py
framework/ci/: __init__.py  github_actions.py  gitlab_ci.py  templates.py
framework/cli/: __init__.py  a11y_commands.py  business_logic_commands.py  ci_commands.py  config_commands.py  daemon_commands.py  dashboard_commands.py  data_commands.py  device_commands.py  docs_commands.py  doctor_command.py  execute_commands.py  fuzz_commands.py  generate_commands.py  healing_commands.py  integration_commands.py  license_commands.py  load_commands.py  main.py  ml_commands.py  ml_selflearn_commands.py  mock_commands.py  notify_commands.py  observability_commands.py  parallel_commands.py  rich_output.py  (+9 more)
jetbrains-plugin/: README.md  build.gradle.kts  settings.gradle.kts
ml_server_mock/: README.md  mock_server.py
reports/: junit.xml  report.html
rust_core/: .gitignore  Cargo.toml  README.md
rust_core/.cargo/: config.toml
rust_core/src/: ast_analyzer.rs  business_logic.rs  correlator.rs  dialogue.txt  io.rs  lib.rs  utils.rs
scripts/: quick_test.py  test_business_logic_v2.py  test_ml_quick.py  train_ml_dev.py  train_ml_models.py  train_production_ml.py  train_production_ml_enhanced.py  verify_enhanced_models.py  verify_trained_models.py
tests/: test_advanced_selectors.py  test_appium_backend.py  test_ci_generators.py  test_core_engine.py  test_device_layer.py  test_exceptions.py  test_flow_discovery.py  test_fuzzing.py  test_healing_fixes.py  test_ml_module.py  test_mocking.py  test_paid_modules.py  test_parallel_execution.py  test_secret_scanner.py  test_security_fixes.py  test_security_modules.py  test_security_types.py  test_skeleton_generator.py
(+262 files in other folders)
